# australian-legal-mcp

./: .containerignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CLIENT_SETUP.md  CURRENT_STATE.md  Cargo.toml  Containerfile  DEPLOYMENT.md  MAINTENANCE.md  MICROSOFT_COPILOT.md  PLAN.md  PORT_STATUS.md  README.md  deny.toml  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: .proofd-manifest.json  src-ato-mcp-cli-py-1412dcd0.md  src-ato-mcp-embed-model-py-27a1df4a.md  src-ato-mcp-indexer-build-py-397c7b5a.md  src-ato-mcp-indexer-chunk-py-7effe4b6.md  src-ato-mcp-indexer-extract-py-3f45c8f5.md  src-ato-mcp-indexer-metadata-py-29ecec0a.md  src-ato-mcp-scraper-pipeline-py-07e0cf8c.md  src-ato-mcp-store-db-py-790a421e.md  src-ato-mcp-store-manifest-py-eab3da4c.md  src-ato-mcp-store-schema-sql-95b4f248.md  src-build-rs-9972ca90.md  src-chunker-rs-698dd6b7.md  src-config-rs-f3ff05c9.md  src-db-rs-a80da136.md  src-extract-rs-62e1b658.md  src-html-rs-13383ba1.md  src-main-rs-4b569f42.md  src-pack-rs-a49247bd.md  src-retrieval-rs-6e6728fd.md  src-search-rs-0d9cc592.md  src-semantic-rs-9dde1488.md  src-source-rs-90b9bdad.md
.claude/skills/smoke/: SKILL.md
.github/workflows/: ci.yml  corpus-release-gpu.yml  release-binaries.yml
commands/: ato-rollback.md  ato-stats.md  ato-update.md
crates/legal-model/: Cargo.toml
crates/legal-model/src/: lib.rs
crates/legal-source-sdk/: Cargo.toml
crates/legal-source-sdk/src/: lib.rs
data/: doc_type_map.yaml
docs/: AZURE_FUTURE.md  QA_REMEDIATION_2026-07-21.md
docs/case-studies/: harbourgrid-rd-ip-restructure.md
docs/validation/: README.md  flat-int8-v20-benchmark.md  harbourgrid-memorandum-technical-review.md  harbourgrid-v21-regression-baseline.json  harbourgrid-v22-evaluation.json  harbourgrid-v22-results.md  schema12-lexical-sidecar-benchmark.md
infra/azure/: budget.bicep  cloud-init.yml  main.bicep  stack.bicep  test.parameters.example.json
infra/hosting/: Caddyfile  caddy-artifact.sha512  configure-auth.sh  legal-mcp.container.template  runtime.env.example  update-image.sh
infra/linode/: .terraform.lock.hcl  install-host.sh  main.tf  outputs.tf  test.tfvars.example  variables.tf  versions.tf
integrations/copilot-studio/: connector.swagger.template.yaml
integrations/microsoft-365/: ai-plugin.template.json
scripts/: azure-vm.sh  azure_generation_transport.py  backfill-citations.py  configure-azure-entra.sh  configure-azure-host.sh  deploy-generation-azure.sh  deploy-generation.sh  discover-related-docs.py  export-mdbr-leaf-ir-model.py  legal-mcp-azure-deploy  legal-mcp-host-deploy  legal-mcp-publisher-command  maintainer-sync.sh  make-offline-bundle.sh  manage-api-keys.py  publish-release.sh  render-agent-audit.py  render-microsoft-integrations.py  run-harbourgrid-eval.py  smoke-rust-install.sh  smoke.sh  test-remote-mcp.py
skills/ato-mcp-server/: SKILL.md
skills/australian-legal-mcp/: SKILL.md
skills/setup-ato-mcp/: SKILL.md
skills/setup-australian-legal-mcp/: SKILL.md
src/: adaptive_http.rs  ann.rs  ato.rs  austlii.rs  bert_tokenizer.rs  browser.rs  browser_http.rs  build.rs  chunker.rs  config.rs  cookies.rs  db.rs  extract.rs  frl.rs  generation_projection.rs  html.rs  http_auth.rs  legacy_arroy.rs  legal_source.rs  lexical.rs  main.rs  ocr.rs  pack.rs  pipeline.rs  retrieval.rs  rules.rs  search.rs  search_timing.rs  semantic.rs  source.rs  source_catalog.rs  source_update.rs  uri.rs
src/ato_mcp/: cli.py
src/ato_mcp/embed/: __init__.py  model.py
src/ato_mcp/indexer/: __init__.py  anchors.py  build.py  chunk.py  definitions.py  extract.py  metadata.py  pack.py  release.py  rules.py
src/ato_mcp/scraper/: __init__.py  client.py  constants.py  downloader.py  pipeline.py  progress.py  reducer.py  snapshot.py  threadpool.py  tree_crawler.py  whats_new.py
src/ato_mcp/store/: db.py  manifest.py  queries.py  schema.sql
src/ato_mcp/util/: log.py  paths.py  power.py
src/official_sources/: federal_court.rs  high_court.rs  mod.rs  nsw_caselaw.rs  nsw_legislation.rs  queensland_legislation.rs  south_australian_legislation.rs  tasmanian_legislation.rs  western_australian_legislation.rs
systemd/: README.md  ato-mcp-maintainer-weekly.service  ato-mcp-maintainer-weekly.timer  ato-mcp-serve.service  ato-mcp-update.service  legal-mcp-maintainer-weekly.service  legal-mcp-maintainer-weekly.timer  legal-mcp-serve.service  legal-mcp-update.service  legal-mcp-update.timer  legal-mcp.env.example  legal-mcp.service
tests/: bootstrap-empty-host-image-fixture.sh  caddy-log-redaction-fixture.sh  configure_azure_host_fixture.py  deploy-generation-abort-fixture.sh  flat-int8-host-cutover-fixture.sh  host-auth-recovery-fixture.sh  host-deploy-abort-fixture.sh  host-deploy-activation-fixture.sh  host-installer-publisher-contract-fixture.sh  host-publisher-fixture.sh  host-rrsync-options-fixture.sh  host-tool-upgrade-fixture.sh  http_smoke.rs  image-generation-pair-cutover-fixture.sh  podman-capability-contract-fixture.sh  stdio_shim.rs  test_azure_generation_transport.py  test_chunk.py  test_citations.py  test_classifier.py  test_configure_azure_host.py  test_definitions.py  test_doc_anchors.py  test_end_to_end.py  test_extract.py  test_human_code.py  test_manage_api_keys.py  test_manifest.py  test_pack.py  test_pipeline_retry_missing.py  test_power.py  test_release.py  test_remote_mcp.py  test_render_agent_audit.py  test_render_microsoft_integrations.py  test_rules.py  test_run_harbourgrid_eval.py  test_store.py  test_tree_crawler.py  test_whats_new.py  (+2 more)
tests/evals/: harbourgrid.json
tests/fixtures/: generation-v19-arroy.json  generation-v20-arroy.json  host-tool-launcher-v0.19.5
tests/fixtures/ato/: cr-2025-13.html
tests/fixtures/federal-court/: 2015fca1134-abstract-numbering-no-levels.docx  degraded-judgment.html  numbered-paragraph-footnote.docx  short-degraded-judgment.html  structured-judgment.html
tests/fixtures/frl/: enum-ordinals.json  renditions.json  sample.docx  sample.docx.html  sample.epub  sample.epub.html  titles-pages.json  (+2 more)
(+10 files in other folders)
