[package]
name = "ato-mcp"
version = "0.15.4"
edition = "2021"
license = "MIT"
description = "Standalone MCP server for the Australian Taxation Office legal corpus"

[[bin]]
name = "ato-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
fs2 = "0.4"
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
regex = "1.11"
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
simsimd = "5"
tar = "0.4"
tiny_http = "0.12"
scraper = "0.20"
ego_tree = { package = "ego-tree", version = "0.6" }
tempfile = "3.15"
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
url = "2.5"
zip = { version = "4.6", default-features = false, features = ["deflate-flate2"] }
zstd = "0.13"
# native-tls (system OpenSSL / Security.framework / SChannel) rather than
# rustls: rustls hard-errors when an HTTPS peer closes a connection without
# the TLS close_notify alert ("peer closed connection without sending TLS
# close_notify"), which the ATO site + corporate proxies do routinely.
# native-tls treats that abrupt close as a normal EOF. Used by every
# outbound fetch path (`fetch` live-fetcher, tree-crawl, link-download,
# whats-new, update); the MCP transport itself is plain localhost HTTP.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls"] }
# ATO outbound requests use reqwest+native-tls so the runtime stays on the
# platform TLS stack.

[features]
default = []
cuda = ["ort/cuda"]

[target.'cfg(windows)'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "api-24", "ndarray"] }

[target.'cfg(not(windows))'.dependencies]
ort = "2.0.0-rc.12"

[dev-dependencies]
rand = "0.8"
