[workspace]
members = [".", "crates/legal-model", "crates/legal-source-sdk"]
resolver = "2"

[package]
name = "australian-legal-mcp"
version = "0.18.1"
edition = "2021"
license = "MIT"
description = "Standalone MCP server for Australian legal sources"
repository = "https://github.com/gunba/australian-legal-mcp"

[[bin]]
name = "legal-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
arroy = "=0.6.4"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
encoding_rs = "0.8"
fs2 = "0.4"
regex = "1.11"
legal-model = { version = "0.1.0", path = "crates/legal-model" }
legal-source-sdk = { version = "0.1.0", path = "crates/legal-source-sdk" }
libc = "0.2"
heed = { version = "=0.22.1", default-features = false }
jsonwebtoken = "9.3.1"
rand = "0.8.5"
rand_chacha = "=0.3.1"
rayon = "1.10"
roaring = "0.10.9"
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signal-hook = "0.3"
tiny_http = "0.12"
scraper = "0.27"
ego_tree = { package = "ego-tree", version = "0.11" }
tempfile = "3.15"
tokenizers = { version = "0.23", default-features = false, features = [
  "fancy-regex",
] }
tungstenite = { version = "0.28", default-features = false, features = ["handshake"] }
unicode_categories = "0.1"
unicode-normalization = "0.1"
url = "2.5"
zip = { version = "4.6", default-features = false, features = [
  "deflate-flate2",
] }
zstd = "0.13"
# native-tls (system OpenSSL / Security.framework / SChannel) rather than
# rustls: rustls hard-errors when an HTTPS peer closes a connection without
# the TLS close_notify alert ("peer closed connection without sending TLS
# close_notify"), which the ATO site + corporate proxies do routinely.
# native-tls treats that abrupt close as a normal EOF. Used by every
# outbound fetch path (`fetch` live-fetcher, tree-crawl, link-download,
# whats-new, update); the MCP transport itself is plain localhost HTTP.
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "brotli",
  "cookies",
  "deflate",
  "gzip",
  "native-tls",
  "zstd",
] }
# ATO outbound requests use reqwest+native-tls so the runtime stays on the
# platform TLS stack.
# Release-only portability feature: statically link vendored OpenSSL when
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }

[features]
default = []
cuda = ["ort/cuda", "ort/tensorrt"]
vendored-openssl = ["dep:openssl-sys"]

[target.'cfg(windows)'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = [
  "load-dynamic",
  "api-24",
  "ndarray",
] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = [
  "load-dynamic",
  "api-20",
  "ndarray",
] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = [
  "load-dynamic",
  "api-24",
  "ndarray",
] }

[dev-dependencies]
