[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ato-mcp"
version = "0.6.6"
description = "Local MCP server for the Australian Taxation Office legal database"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jordan" }]
keywords = ["mcp", "ato", "tax", "australia", "legal", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "selectolax>=0.3.21",
    "markdownify>=0.11",
    "sqlite-vec>=0.1.6",
    "onnxruntime>=1.20",
    "tokenizers>=0.20",
    "orjson>=3.10",
    "zstandard>=0.22",
    "platformdirs>=4",
    "pydantic>=2",
    "numpy>=1.26",
    "pyyaml>=6",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/gunba/ato-mcp"
Repository = "https://github.com/gunba/ato-mcp"
Issues = "https://github.com/gunba/ato-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
# Maintainer-only: GPU-backed corpus build. End users run the Rust binary
# and never load this Python package, so pinning the heavier onnxruntime-gpu
# wheel here doesn't reach them.
#
# onnxruntime and onnxruntime-gpu both ship a module named ``onnxruntime``
# and clobber each other if installed in the same environment — pip can't
# detect the conflict because the package names are different. Install
# this group with ``pip uninstall -y onnxruntime`` first so the GPU build
# wins:
#
#     pip install -e '.[dev]'
#     pip uninstall -y onnxruntime
#     pip install -e '.[gpu]'
#
# After install, ``ort.get_available_providers()`` should list
# ``CUDAExecutionProvider``. If it doesn't, ``LD_LIBRARY_PATH`` is missing
# the venv's ``nvidia/*/lib`` paths — see scripts/maintainer-sync.sh for
# how to set it.
gpu = [
    "onnxruntime-gpu>=1.25,<2",
]

[project.scripts]
ato-mcp = "ato_mcp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ato_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"data/doc_type_map.yaml" = "ato_mcp/_data/doc_type_map.yaml"
"data/eval_queries.yaml" = "ato_mcp/_data/eval_queries.yaml"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
