[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ato-mcp"
version = "0.8.0"
description = "Pytest fixtures + thin Python wrappers around the Rust ato-mcp binary. Production install is the Rust binary alone; this package exists only so maintainers can run pytest against the Rust output."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jordan" }]
keywords = ["mcp", "ato", "tax", "australia", "legal", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "selectolax>=0.3.21",
    "orjson>=3.10",
    "pydantic>=2",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.urls]
Homepage = "https://github.com/gunba/ato-mcp"
Repository = "https://github.com/gunba/ato-mcp"
Issues = "https://github.com/gunba/ato-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ato_mcp"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
