[package]
name = "legal-model"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Stable source-qualified identities for australian-legal-mcp"
repository = "https://github.com/gunba/australian-legal-mcp"

[dependencies]
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
