[package]
name = "legal-source-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Validated source inventory and normalized document contract for australian-legal-mcp"

[dependencies]
legal-model = { path = "../legal-model" }
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.15"
url = "2.5"
